# raspivideocap

./: CMakeLists.txt  README.md  post_install.cmake
src/: RaspiCLI.h  RaspiCamControl.c  RaspiCamControl.h  raspivideocap.cpp  raspivideocap.h  raspivideocap_core.cpp  raspivideocap_core.h
test/: CMakeLists.txt  test_raspivideocap.cpp
